Fixed getOption(SO_OOBLINE) to return Boolean instead of Integer.